Внес в шаблон local_settings настройки smtp-сервера

--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -14,3 +14,10 @@ DATABASES = {
 
 # Unique 
 SECRET_KEY = 'y8!nb5y#di-gm&6glczhn1x6!anpk#i$$(qtq7p@^0k)x*(qb$'
+
+# Django mailer settings
+EMAIL_HOST = 'smtp.gmail.com'
+EMAIL_HOST_USER = 'username'
+EMAIL_HOST_PASSWORD = 'username pass'
+EMAIL_PORT = 587
+EMAIL_USE_TLS = True
