--- a/insurance/templates/registration/password_change_form.html
+++ b/insurance/templates/registration/password_change_form.html
@@ -40,6 +40,7 @@
 
       <script type="text/javascript">document.getElementById("id_old_password").focus();</script>
     </div>
-</form></div>
+</form>
+</div>
 
 {% endblock %}
