--- a/insurance/templates/profile/userprofile_edit.html
+++ b/insurance/templates/profile/userprofile_edit.html
@@ -4,7 +4,10 @@
 
 {% block content %}
 <form action="" method="post">{% csrf_token %}
-{{ form.as_p }}
+  <p>User form:</p>
+  {{ user_form.as_p }}
+  <p>Profile form:</p>
+{{ profile_form.as_p }}
 <input type="submit" value="Submit" />
 </form>
 {% endblock %}
