--- a/insurance/templates/profile/userprofile_edit.html
+++ b/insurance/templates/profile/userprofile_edit.html
@@ -1,9 +1,10 @@
-{% extends "base.html" %}
+{% extends "profile/userprofile_base.html" %}
 
 
 
-{% block content %}
-<form action="" method="post">{% csrf_token %}
+{% block inner_content %}
+<form action="" method="post">
+  {% csrf_token %}
   <p>User form:</p>
   {{ user_form.as_p }}
   <p>Profile form:</p>
