Мои полисы, простой список в личном кабинете и модели

--- a/insurance/templates/profile/userprofile_base.html
+++ b/insurance/templates/profile/userprofile_base.html
@@ -13,7 +13,7 @@
     <li class="separator"> | </li>
     <li><a href="#">Insurance calc</a></li>
     <li class="separator"> | </li>
-    <li><a href="#">My policies</a></li>
+    <li><a href="{% url userprofile_policylist %}">My policies</a></li>
     <!-- <li>Invite a friend</li> -->
   </ul>
 </div>
