--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -26,7 +26,7 @@
           </li>
           {% else %}
           <li>
-            <a href="{% url userprofile_edit %}">{{ user }}</a>&nbsp
+            <a href="{% url userprofile_edit %}">Мой кабинет</a>&nbsp
           </li>
           <li>
             <a href="{% url auth_logout %}">Выйти</a>&nbsp
