--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="header">
-      <div id="logo"><a href="{% url home %}">Insurance Inc</a></div>
+      <div id="logo"><a href="{% url home %}">Directif.ru</a></div>
       <div id="navigation">
         {% block navigation %}
         <ul>
