--- a/insurance/local_settings.py.tmpl
+++ b/insurance/local_settings.py.tmpl
@@ -21,3 +21,6 @@ EMAIL_HOST_USER = 'username'
 EMAIL_HOST_PASSWORD = 'username pass'
 EMAIL_PORT = 587
 EMAIL_USE_TLS = True
+
+# 1 for directif.ru, 2 for dev.directif.ru
+SITE_ID = 1
