--- a/insurance/templates/registration/password_reset_email.html
+++ b/insurance/templates/registration/password_reset_email.html
@@ -1,14 +1,13 @@
 {% load url from future %}
 {% autoescape off %}
-You're receiving this e-mail because you requested a password reset for your user account at {{ site_name }}.
+Вы получили это письмо потому что вы или кто-то другой запросили восстановление пароля для вашего аккаунта на сайте {{ site_name }}. 
 
-Please go to the following page and choose a new password:
-reset_link 
+Пожалуйста, перейдите по следующей ссылке и введите новый пароль:
 {{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
-"Your username, in case you've forgotten: {{ user.username }}
 
-Thanks for using our site!
+Напоминаем что ваш логин на сайте: {{ user.email }}
 
-The {{ site_name }} team
+Спасибо за то что пользуетесь нашим сервисом!
+С наилучшими пожеланиями, команда {{ site_name }} 
 
 {% endautoescape %}
