Перевел на русский страничку Моих полисов

--- a/insurance/apps/profile/templates/profile/userprofile_base.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base.html
@@ -7,13 +7,13 @@
 {% block profile_nav  %}
 <div id="profile-navigation">
   <ul>
-    <li><a href="{% url userprofile_edit %}">Personal data</a></li>
+    <li><a href="{% url userprofile_edit %}">Мой профиль</a></li>
     <li class="separator"> | </li>
-    <li><a href="#">Insurance helper</a></li>
+    <li><a href="#">Страховой помощник</a></li>
     <li class="separator"> | </li>
-    <li><a href="#">Insurance calc</a></li>
+    <li><a href="#">Страховой калькулятор</a></li>
     <li class="separator"> | </li>
-    <li><a href="{% url userprofile_policylist %}">My policies</a></li>
+    <li><a href="{% url userprofile_policylist %}">Мои полисы</a></li>
     <!-- <li>Invite a friend</li> -->
   </ul>
 </div>
