--- a/insurance/apps/django_messages/templates/django_messages/base.html
+++ b/insurance/apps/django_messages/templates/django_messages/base.html
@@ -1,13 +1,5 @@
-{% extends "base.html" %}
+{% extends "profile/userprofile_base.html" %}
 {% load i18n %}  
 {% block bodyclass %}about{% endblock %}
-{% block content %}  
-{% endblock %}
-{% block sidebar %}
-<ul class="subnavilist">
-    <li><a href="{% url messages_inbox %} ">&raquo;&nbsp;{% trans "Inbox" %}</a></li>
-    <li><a href="{% url messages_outbox %} ">&raquo;&nbsp;{% trans "Sent Messages" %}</a></li>
-    <li><a href="{% url messages_compose %} ">&raquo;&nbsp;{% trans "New Message" %}</a></li>
-    <li><a href="{% url messages_trash %} ">&raquo;&nbsp;{% trans "Trash" %}</a></li>
-</ul>
+{% block inner_content %}  
 {% endblock %}
