--- a/insurance/apps/django_messages/templates/django_messages/inbox.html
+++ b/insurance/apps/django_messages/templates/django_messages/inbox.html
@@ -1,6 +1,6 @@
 {% extends "django_messages/base.html" %} 
 {% load i18n %} 
-{% block content %}
+{% block inner_content %}
 <h1>{% trans "Inbox" %}</h1>
 {% if message_list %} 
 <table class="messages">
