--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -2,8 +2,11 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+
+    {% block title %}
     <title>Проект Insurance, предварительный набросок верстки для
     разработчиков</title>
+    {% endblock %} <!-- title -->
     <link rel="stylesheet" href="{{ STATIC_URL }}css/main.css" type="text/css"/>
   </head>
   <body>
@@ -40,6 +43,17 @@
         {% endblock %}
       </div>
     </div>
+    
+    <div id="site-menu">
+      {% block site_menu %}
+      <ul>
+	<li><a href="/fp/faq/">FAQ</a></li>
+	<li><a href="/fp/about">О компании</a></li>
+	<li><a href="/fp/lisence_agreement/">Лицензионнное соглашение</a></li>
+      </ul>
+      {% endblock %} <!-- site_menu -->
+    </div>
+
     <div class="content">
       {% block content %}
       {% endblock%}
