--- a/.gitignore.tmpl
+++ b/.gitignore.tmpl
@@ -8,16 +8,16 @@ local_settings.py
 # files from all the apps into this
 # directory. Thus, it only should be filled in
 # production
-static
+/static
 !insurance/static
 
 # media directory will be filled with dynamic static files, i.e files that were
 # added during project runtime. The files should not make their way into the
 # main repository
-media
+/media
 
 # Env dir should contain project-specific libraries, such as django itself or DB
 # drivers
-env
+/env
 
 .gitignore
