Мелкие фиксы и переводы

--- a/insurance/templates/registration/activation_complete.html
+++ b/insurance/templates/registration/activation_complete.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-Activation complete. 
+Активация учетной записи завершена. Нажмите ссылку "Войти" для работы на сайте.
 {% endblock %}
