--- a/insurance/templates/registration/password_reset_done.html
+++ b/insurance/templates/registration/password_reset_done.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<h1>Password reset successful</h1>
+<h1>Сброс пароля</h1>
 
-<p>We've e-mailed you instructions for setting your password to the e-mail address you submitted. You should be receiving it shortly.</p>
+<p>Инструкции по установке нового пароля высланы вам на почту. </p>
 
 {% endblock %}
