--- a/insurance/templates/registration/password_reset_email.html
+++ b/insurance/templates/registration/password_reset_email.html
@@ -3,11 +3,11 @@
 Вы получили это письмо потому что вы или кто-то другой запросили восстановление пароля для вашего аккаунта на сайте {{ site_name }}. 
 
 Пожалуйста, перейдите по следующей ссылке и введите новый пароль:
-{{ protocol }}://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
+http://{{ domain }}{% url 'django.contrib.auth.views.password_reset_confirm' uidb36=uid token=token %}
 
 Напоминаем что ваш логин на сайте: {{ user.email }}
 
 Спасибо за то что пользуетесь нашим сервисом!
-С наилучшими пожеланиями, команда {{ site_name }} 
+С наилучшими пожеланиями, команда {{ domain }} 
 
 {% endautoescape %}
