--- a/insurance/templates/registration/password_reset_form.html
+++ b/insurance/templates/registration/password_reset_form.html
@@ -1,13 +1,14 @@
 {% extends "base.html" %}
 {% block content %}
 
-<h1>Password reset</h1>
+<h1>Сбросить пароль</h1>
 
-<p>Forgotten your password? Enter your e-mail address below, and we'll e-mail instructions for setting a new one.</p>
+<p>Забыли пароль? Введите ниже адрес вашей электронной почты, и мы вышлем
+  инструкции по установке нового.</p>
 
 <form action="" method="post">{% csrf_token %}
 {{ form.email.errors }}
-<p><label for="id_email">E-mail address:</label> {{ form.email }} <input type="submit" value="Reset my password" /></p>
+<p><label for="id_email">Адрес электронной почты:</label> {{ form.email }} <input type="submit" value="Сбросить пароль" /></p>
 </form>
 
 {% endblock %}
