--- a/insurance/templates/registration/registration_complete.html
+++ b/insurance/templates/registration/registration_complete.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
 {% block content %}
-Registration complete. Confirmation email has been sent.
+Регистрация закончена. Вы получите письмо с инструкциями по подтверждению
+корректности введенных данных.
 {% endblock %}
