--- a/insurance/templates/index.html
+++ b/insurance/templates/index.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-Welcome to the Insurance project!
+Добро пожаловать на directif.ru!
 {% endblock %}
