--- a/insurance/templates/registration/password_reset_complete.html
+++ b/insurance/templates/registration/password_reset_complete.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 
-<h1>Password reset complete</h1>
+<h1>Сброс пароля завершен</h1>
 
-<p>Your password has been set.  You may go ahead and log in now.</p>
+<p>Пароль установлен. Нажмите на "Войти", чтобы продолжить работу с сайтом.</p>
 
-<p><a href="{{ login_url }}">Log in</a></p>
+<p><a href="{{ login_url }}">Войти</a></p>
 
 {% endblock %}
