--- a/insurance/templates/registration/password_reset_confirm.html
+++ b/insurance/templates/registration/password_reset_confirm.html
@@ -4,23 +4,23 @@
 
 {% if validlink %}
 
-<h1>Enter new password</h1>
+<h1>Введите новый пароль</h1>
 
-<p>Please enter your new password twice so we can verify you typed it in correctly.</p>
+<p>Введите новый пароль дважды.</p>
 
 <form action="" method="post">{% csrf_token %}
 {{ form.new_password1.errors }}
-<p class="aligned wide"><label for="id_new_password1">New password:</label>{{ form.new_password1 }}</p>
+<p class="aligned wide"><label for="id_new_password1">Новый пароль:</label>{{ form.new_password1 }}</p>
 {{ form.new_password2.errors }}
-<p class="aligned wide"><label for="id_new_password2">Confirm password:</label>{{ form.new_password2 }}</p>
-<p><input type="submit" value="Change my password" /></p>
+<p class="aligned wide"><label for="id_new_password2">Новый пароль (опять)</label>{{ form.new_password2 }}</p>
+<p><input type="submit" value="Изменить мой пароль" /></p>
 </form>
 
 {% else %}
 
-<h1>Password reset unsuccessful</h1>
+<h1>Попытка сбросить пароль не удалась</h1>
 
-<p>The password reset link was invalid, possibly because it has already been used.  Please request a new password reset.</p>
+<p>Ссылка для сброса некорректна. Попробуйте сбросить пароль еще раз.</p>
 
 {% endif %}
 
