Добавлено рисование форм изменения/добавления персон.

--- a/insurance/apps/profile/templates/profile/userprofile_base.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base.html
@@ -23,6 +23,11 @@
 {% endblock %}
 
 {% block inner_content %}
+
+{% block persona_table %}
+{% endblock %} <!-- persona_table -->
+
+
 {% endblock %}
 
 {% endblock %}
