--- a/insurance/static/css/main.css
+++ b/insurance/static/css/main.css
@@ -101,6 +101,40 @@ body {
     text-align: center;
 }
 
+/* Userprofile _edit */
+
+#persona_table {
+    margin:0 auto;
+}
+
+#persona_table table {
+    font-family: "Lucida Sans Unicode", "Lucida Grande", Sans-Serif;
+    font-size: 12px;
+    background: #fff;
+    /* margin: 45px; */
+    margin:0 auto;
+    width: 880px;
+    border-collapse: collapse;
+    text-align: left;
+}
+#persona_table table th
+{
+	font-size: 14px;
+	font-weight: normal;
+	color: #039;
+	padding: 10px 8px;
+	border-bottom: 2px solid #6678b1;
+}
+#persona_table table td
+{
+	color: #669;
+	padding: 9px 8px 0px 8px;
+}
+#persona_table table td
+{
+	color: #009;
+}
+
 /*
 ==================== Fonts ====================
 */
