Шаблоны под список полисов

--- a/insurance/templates/base.html
+++ b/insurance/templates/base.html
@@ -48,8 +48,8 @@
       {% block site_menu %}
       <ul>
 	<li><a href="/fp/faq/">FAQ</a></li>
-	<li><a href="/fp/about">О компании</a></li>
-	<li><a href="/fp/lisence_agreement/">Лицензионнное соглашение</a></li>
+	<li><a href="/fp/about/">О компании</a></li>
+	<li><a href="/fp/license_agreement/">Лицензионнное соглашение</a></li>
       </ul>
       {% endblock %} <!-- site_menu -->
     </div>
