--- a/insurance/templates/registration/login.html
+++ b/insurance/templates/registration/login.html
@@ -5,4 +5,5 @@
 {{ form.as_p }}
 <input type="submit" value="Submit" />
 </form>
+<li><a href="{% url auth_password_reset %}">Забыли пароль?</a></li>
 {% endblock %}
