--- a/insurance/apps/profile/templates/profile/userprofile_base.html
+++ b/insurance/apps/profile/templates/profile/userprofile_base.html
@@ -17,7 +17,7 @@
     <li class="separator"> | </li>
     <li><a href="{% url messages_inbox %}">Мои уведомления ({% inbox_count %})</a></li>
     <li class="separator"> | </li>
-    <li><a href="{% url notification_notices %}">Мои уведомления - 2 </a></li>
+    <li><a href="{% url ins_notification_inbox %}">Мои уведомления - 2 </a></li>
 
     <!-- <li>Invite a friend</li> -->
   </ul>
