--- a/var/html/css/style.css
+++ b/var/html/css/style.css
@@ -77,12 +77,13 @@ a:hover        {text-decoration:none}
 			.calk_content	{background:url(../images/calk_content.jpg) 0 0 no-repeat; width:702px; height:527px; clear:both; overflow:hidden;}
 				.select_style	{padding:28px 0 0 67px;}
 				.cuselText	{background:url(../images/select.jpg) 0 0 no-repeat; width:579px; height:43px; font-size:30px; color:#b9a49c; padding:7px 0 0 10px;}
-					.cusel-scroll-wrap	{border:1px solid #734834; padding:10px; margin:0 0 0 7px; width:745px; position:absolute; background:#fff;}
+					.cusel-scroll-wrap	{border:1px solid #734834; padding:10px; margin:0 0 0 7px; width:547px; position:absolute; background:#fff;}
+				#cusel-scroll-country	{}
 					#cusel-scroll-country span	{display:block; font-size:20px; color:#b9a49c; cursor:pointer;}
 					.jScrollPaneContainer	{position:relative; overflow:hidden;}
 					.jScrollPaneTrack	{background:#501c07; position:absolute; right:30px;}
 					.jScrollPaneDrag	{background:#e65a02; position:absolute; margin:0 -10px; width:30px !important;}
-				.search_box	{background:url(../images/search_box.jpg) 0 0 no-repeat; width:787px; height:367px; margin:0 0 0 63px;}
+				.search_box	{background:url(../images/search_box.jpg) 0 0 no-repeat; width:612px; height:286px; margin:0 0 0 51px;}
 					.link_search_table	{width:716px; margin:4px 0 0 30px;}
 						.link_search_table th	{padding:0 31px 20px 0; text-align:left; font-weight:normal; color:#fff; font-size:12px;}
 						.link_search_table td	{font-size:12px; color:#fff; vertical-align:top; padding:0 0 10px 0;}
@@ -91,6 +92,10 @@ a:hover        {text-decoration:none}
 				.assume	{text-align:right; padding:28px 50px 40px 0;}
 		.button_box	{overflow:hidden; padding:0 0 27px 0;}
 			.button_link	{float:left; padding:0 16px;}
+		.box_checkbox	{font-size:14px; color:#501c07; text-transform:uppercase; padding:17px 0 0 76px; width:570px;}
+			.checkbox	{float:left; width:25px; height:25px; margin:0 9px 0 0;}
+			.checkbox_on	{background:url(../images/checkbox_on.gif) 0 0 no-repeat;}
+			
 
 /*-------------------
 	footer
